GeoGraphicsScene: handle MultiGeometries as well

BUG: 318512